--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     input { width: 100%; padding: 10px; margin: 20px 0; font-size: 16px; }
     .result { background: #f1f1f1; padding: 15px; margin-bottom: 10px; border-radius: 8px; }
     .keyword { font-weight: bold; color: #0077cc; }
+    button {
+      padding: 6px 12px;
+      background: #0077cc;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+  }
+
+button:hover {
+  background: #005fa3;
+}
+
   </style>
 </head>
 <body>
