--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Công Cụ Tìm Format</title>
@@ -48,18 +49,20 @@
       margin: 8px 0;
       line-height: 1.5;
     }
-    button {
-      padding: 6px 12px;
+     button {
+      padding: 8px 10px;
       background: #0077cc;
       color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 50%;
       cursor: pointer;
-      font-size: 14px;
+      font-size: 16px;
     }
+    
     button:hover {
       background: #005fa3;
     }
+
   </style>
 </head>
 <body>
@@ -72,3 +75,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
